--- a/src/components/shared/sidebar/sidebar-icon/sidebar-icon.styles.scss
+++ b/src/components/shared/sidebar/sidebar-icon/sidebar-icon.styles.scss
@@ -1,5 +1,5 @@
 .sidebar-icon-container {
-    @apply flex items-center
+    @apply flex items-center shrink-0
     w-14 h-14 mt-1.5
     bg-gray-800 text-green-500
     cursor-pointer
